register user api added
